Multiple updates for code quality purposes. (#507)
1. Added a glossary to improve consistency in OpenSpec.
2. Updated skills and some documentation.
3. Added guards in archunit so that `@Inject` constructors are never
   public.
4. Added a check in checkstyle to block *Impl naming.
5. Switched `@Nullable` to `Optional` structures. Converting them
   to prevent the taint from propagating.
6. Put in work to eliminate boolean parameters from methods.
7. Hardened the guice injector system to make it production ready and ensure
   explicit bindings.
8. Added ArchUnit tests to enforce package dependency rules.
9. Enhanced handling around `trust` PSQL settings with an optional, and explicit, flag and no insecure defaults. 
10. Improved the compose structure to not use a hard coded password and instead to prefer generating a password.
11. Removed an out-of-date design doc.
12. Misc documentation fixes. 

Built with assistance from antigravity.